# HERMES

./: .gitignore  EXPLANATION.md  HANDOFF.md  README.md  docker-compose.yml  fix.md  package-lock.json  package.json
.github/workflows/: ci.yml
RAG_ARCHITECTURES/: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  README.md  ROADMAP.md  SECURITY.md  agent-memory-types.md  agentic-orchestration-production.md  benchmarks.md  blogs.md  books.md  datasets.md  production-rag-pipeline.md  rag-architectures.md  rag-failure-handling.md  rag-pitfalls.md  rag-security.md  rest-api-design.md  showcase.md
RAG_ARCHITECTURES/.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
RAG_ARCHITECTURES/docs-site/: .gitattributes  mkdocs.yml  requirements.txt  stage_docs.sh
backend/: .env.example  Dockerfile  clear_cache.py  eval_details.json  eval_report.json  pyproject.toml  test_cache.py  test_state.py
backend/eval/: gold_v2.json
backend/eval/experiments/: baseline_or_cloud.json  chunk_fixed_150_50.json  clean_slate_retrieval_v1.json  clean_slate_winning.json  improved_stack.json  parallel_or_fast.json  parallel_or_v2.json  rerank_0.20_candidates_50.json  retrieval_baseline.json
backend/eval/kb/: hermes_architecture.md
backend/scripts/: brutal_e2e.py  run_eval_grid.sh
backend/src/: auth.py  db.py  main.py  verify.py
backend/src/agents/: cache_check.py  graph.py  query_rewrite.py  research.py  state.py  stream_research.py  supervisor.py  synthesis.py
backend/src/evaluation/: golden_dataset.py  ragas_eval.py  retrieval_eval.py
backend/src/ingestion/: pdf_loader.py  url_loader.py  youtube_loader.py
backend/src/llm/: providers.py  router.py
backend/src/mcp/: __init__.py  __main__.py  server.py
backend/src/rag/: cache.py  chunk_strategies.py  chunker.py  context_pack.py  embeddings.py  factory.py  graph_index.py  query_expand.py  reranker.py  retriever.py
backend/src/routers/: auth.py  eval.py  ingest.py  research.py
backend/src/tools/: __init__.py  fetch_parent.py  graph_search.py  hybrid_search.py  web_fetch.py
backend/testers/: test_pipeline.py
backend/tests/: conftest.py  test_acl.py  test_auth.py  test_chunk_strategies.py  test_context_pack.py  test_eval_admin.py  test_graph_cache.py  test_graph_index.py  test_ingest.py  test_integration_retriever.py  test_mcp_schemas.py  test_query_expand.py  test_query_rewrite.py  test_research.py  test_research_node.py  test_stream.py  test_tools.py
docs/: CV_BULLETS.md  EVAL.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  (+2 more)
(+26 files in other folders)
