[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "fastembed>=0.7.4",
    "hatchling>=1.29.0",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.1.3",
    "litellm>=1.82.6",
    "passlib[bcrypt]>=1.7.4",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "qdrant-client>=1.17.1",
    "redis>=7.3.0",
    "sentence-transformers>=5.3.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "unstructured>=0.21.5",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
