[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "datasets>=4.8.4",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "fastembed>=0.7.4",
    "hatchling>=1.29.0",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.1.3",
    "litellm>=1.82.6",
    "openai>=2.29.0",
    "passlib[bcrypt]>=1.7.4",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "redis>=7.3.0",
    "sentence-transformers>=5.3.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "sse-starlette>=3.3.3",
    "trafilatura>=2.0.0",
    "unstructured>=0.21.5",
    "uvicorn[standard]>=0.42.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
